--- a/App-android/AggregateScankt/gradle/wrapper/gradle-wrapper.properties
+++ b/App-android/AggregateScankt/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,8 @@
-#Fri Mar 10 17:29:22 GFT 2023
+#Sat Dec 28 21:35:52 BRT 2024
 distributionBase=GRADLE_USER_HOME
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-bin.zip
 distributionPath=wrapper/dists
-zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.12-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
